# XTools

./: .gitignore  .umirc.ts  eslint.config.js  global.d.ts  globals.d.ts  index.html  package.json  pnpm-lock.yaml  readme.md  tsconfig.json  vite.config.ts
.github/workflows/: deploy.yml
src/: App.tsx  index.d.ts  loading.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/locales/: en-us.json  index.ts  zh-cn.json
src-tauri/src/: main.rs  menu.rs  translator.rs
src/.umi/: exports.ts  testBrowser.tsx  tsconfig.json  umi.ts
src/.umi/core/: helmet.ts  history.ts  historyIntelli.ts  plugin.ts  pluginConfigJoi.d.ts  polyfill.ts  route.tsx
src/assets/: loading.css
src/bridge/: base64.ts  index.ts  store.ts
src/components/LangIcon/: index.tsx
src/components/ScreenSplitIcon/: index.scss  index.tsx
src/components/ThemeIcon/: index.tsx
src/context/: global.ts
src/db/: dbService.ts  index.ts  keyValueStore.ts
src/http/: client.ts  index.ts
src/layout/: index.tsx
src/layouts/: index.module.scss  index.tsx  menu.tsx
src/locales/: en-us.json  index.ts  zh-cn.json
src/pages/: chrono.tsx  colorConversion.tsx  home.tsx  imageCompress.tsx  imageSlicing.tsx  imgFormatConversion.tsx  imgScan.tsx  index.scss  index.tsx  jsonDiff.tsx  jsonFormatting.tsx
src/pages/http/: index.tsx
src/pages/imageCompress/: batchImageCompress.tsx  index.tsx  singleImageCompress.tsx
src/pages/imageSlicing/: index.less  index.tsx
src/pages/imgEditor/: index.tsx
src/routes/: index.tsx
src/type/: index.d.ts
src/utils/: const.ts  index.ts
(+2 files in other folders)
